2011-03-04  Richard Guenther  <rguenther@suse.de>

PR middle-end/47968
	* expmed.c (extract_bit_field_1): Prefer vector modes that
	vec_extract patterns can handle.

	* gcc.dg/torture/pr47968.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@170673 138bc75d-0d04-0410-961f-82ee72b054a4